--- a/client/src/css/create-activity-form.module.css
+++ b/client/src/css/create-activity-form.module.css
@@ -42,6 +42,11 @@
     width: 80%;
   }
 }
+.container .error {
+  color: #f00;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 12px;
+}
 .container .groupTwo {
   width: inherit;
   display: flex;
@@ -63,11 +68,6 @@
 }
 .container .group input:focus {
   outline: none;
-}
-.container .group .error {
-  color: #f00;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 12px;
 }
 .container .season {
   width: inherit;
