--- a/client/src/css/countries-search.module.css
+++ b/client/src/css/countries-search.module.css
@@ -16,6 +16,11 @@
   border: none;
   font-size: 14px;
 }
+.darkBtn:hover {
+  background-color: #f0f1f5;
+  color: #002448;
+  border: 1px solid #002448;
+}
 .lightBtn {
   background-color: #f0f1f5;
   color: #002448;
@@ -24,19 +29,24 @@
   border: 1px solid #002448;
   font-size: 14px;
 }
+.lightBtn:hover {
+  background-color: #002448;
+  color: #fff;
+  border: 1px solid #fff;
+}
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  max-height: 40vh;
+  max-height: 30vh;
   padding: 0.5rem;
 }
 .container p {
   margin-top: 0;
   margin-bottom: 1rem;
-  font-size: 12px;
+  font-size: 14px;
 }
 .container input[type="text"] {
   width: inherit;
