--- a/client/src/css/countries-search.module.css
+++ b/client/src/css/countries-search.module.css
@@ -49,9 +49,10 @@
   font-size: 14px;
 }
 .container input[type="text"] {
+  height: 3.5rem;
   width: inherit;
-  border-radius: 0.5rem;
-  padding: 0.5rem;
+  border-radius: 1.5rem;
+  padding: 0.2rem 1rem;
   border: none;
   font-size: 12px;
 }
