--- a/client/src/stylus/countries-search.module.styl
+++ b/client/src/stylus/countries-search.module.styl
@@ -13,9 +13,10 @@
         margin-bottom:1rem
         font-size:14px
     input[type="text"]
+        height: 3.5rem
         width: inherit
-        border-radius: 0.5rem
-        padding: 0.5rem
+        border-radius: 1.5rem
+        padding: 0.2rem 1rem
         border:none
         font-size: 12px
         &:focus
